Ajout du département au Manager !